// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`criteria are required 1`] = `
Object {
  "_errors": Array [],
  "criteria": Object {
    "_errors": Array [],
    "supervisionPastEarlyDischargeDate": Object {
      "_errors": Array [
        "Required",
      ],
    },
    "usNdImpliedValidEarlyTerminationSentenceType": Object {
      "_errors": Array [
        "Required",
      ],
    },
    "usNdImpliedValidEarlyTerminationSupervisionLevel": Object {
      "_errors": Array [
        "Required",
      ],
    },
    "usNdNotInActiveRevocationStatus": Object {
      "_errors": Array [
        "Required",
      ],
    },
  },
}
`;

exports[`criteria must not be empty 1`] = `
Object {
  "_errors": Array [],
  "criteria": Object {
    "_errors": Array [],
    "supervisionPastEarlyDischargeDate": Object {
      "_errors": Array [],
      "eligibleDate": Object {
        "_errors": Array [
          "Required",
        ],
      },
    },
    "usNdImpliedValidEarlyTerminationSentenceType": Object {
      "_errors": Array [],
      "supervisionType": Object {
        "_errors": Array [
          "Required",
        ],
      },
    },
    "usNdImpliedValidEarlyTerminationSupervisionLevel": Object {
      "_errors": Array [],
      "supervisionLevel": Object {
        "_errors": Array [
          "Required",
        ],
      },
    },
    "usNdNotInActiveRevocationStatus": Object {
      "_errors": Array [],
      "revocationDate": Object {
        "_errors": Array [
          "Required",
        ],
      },
    },
  },
}
`;

exports[`must not have revocation date 1`] = `
Object {
  "_errors": Array [],
  "criteria": Object {
    "_errors": Array [],
    "usNdNotInActiveRevocationStatus": Object {
      "_errors": Array [],
      "revocationDate": Object {
        "_errors": Array [
          "Expected null, received string",
        ],
      },
    },
  },
}
`;

exports[`transform record 1`] = `
Object {
  "criteria": Object {
    "supervisionPastEarlyDischargeDate": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
    "usNdImpliedValidEarlyTerminationSentenceType": Object {
      "supervisionType": "PROBATION",
    },
    "usNdImpliedValidEarlyTerminationSupervisionLevel": Object {
      "supervisionLevel": "MEDIUM",
    },
    "usNdNotInActiveRevocationStatus": Object {
      "revocationDate": null,
    },
  },
  "externalId": "abc123",
  "formInformation": Object {
    "clientName": "Firstname Lastname",
    "convictionCounty": "Bloom",
    "crimeNames": Array [
      "Crime1",
      "crime2",
    ],
    "criminalNumber": "123456",
    "judgeName": "Judgename",
    "judicialDistrictCode": "XX",
    "priorCourtDate": 2022-01-01T00:00:00.000Z,
    "probationExpirationDate": 2024-05-01T00:00:00.000Z,
    "probationOfficerFullName": "Fakename Officername",
    "sentenceLengthMonths": 24,
  },
  "metadata": Object {
    "ICOut": false,
    "multipleSentences": false,
    "outOfState": false,
  },
  "stateCode": "US_OZ",
}
`;
